EEE details Updated

--- a/departments/ug/eee.html
+++ b/departments/ug/eee.html
@@ -168,7 +168,7 @@
                                             <td>1</td>
                                             <td>RAFEEQA</td>
                                             <td>III YR</td>
-                                            <td>-</td>
+                                            <td>HAIR DRESSING</td>
                                             <td>Holy cross clg</td>
                                             <td>SECOND PRICE</td>
                                         </tr>
@@ -198,7 +198,49 @@
                         <div id="placement" class="content-section d-none">
                             <h2 class="title-slogan mb-4">Placements</h2>
 
-                            <p class="text-black">Update Soon...</p>
+                            <div class="table-container">
+                                <table class="trust-table">
+                                    <thead>
+                                        <tr class="text-white" style="background-color: #9d7651;">
+                                            <th>SI.NO</th>
+                                            <th>STUDENT NAME</th>
+                                            <th>COMPANY</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>ABDUL RAHUMAN</td>
+                                            <td>BRAKES INDIA LTD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>FRANKLIN M</td>
+                                            <td>BRAKES INDIA LTD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>JEGAN S</td>
+                                            <td>BRAKES INDIA LTD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>MOHAMMED ASIQ </td>
+                                            <td>BRAKES INDIA LTD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5</td>
+                                            <td>MOHAMMED ANAYEEM</td>
+                                            <td>BRAKES INDIA LTD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>ABDUL RAHUMAN</td>
+                                            <td>ALASS INFO TECH PVT  LTD</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
 
                         </div>
 
@@ -206,10 +248,112 @@
                         <div id="events" class="content-section d-none">
                             <h2 class="title-slogan mb-4">Events</h2>
 
-                            <ul class="text-black">
-                                <li>Presentation Day</li>
-                                <li>Work Shop</li>
-                            </ul>
+                            <div class="table-container">
+                                <table class="trust-table">
+                                    <thead>
+                                        <tr class="text-white" style="background-color: #9d7651;">
+                                            <th>SI.NO</th>
+                                            <th>NAME OF EVENT</th>
+                                            <th>CONDUCTED DATE</th>
+                                            <th>STUDENTS</th>
+                                            <th>RESOURCE PERSON</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>PRESENTATION DAY</td>
+                                            <td>10-02-2023</td>
+                                            <td>2,3 YEAR</td>
+                                            <td>Class Coordinator</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>E-CADD</td>
+                                            <td>24-03-2023</td>
+                                            <td>2,3 YEAR</td>
+                                            <td>Mrs.GANGA GOWRI</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>PROJECT EXPO 2K23</td>
+                                            <td>06.05.2023</td>
+                                            <td>3,4 YEAR</td>
+                                            <td>Dept STAFFS</td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>PRESENTATION DAY</td>
+                                            <td>30.05.2023</td>
+                                            <td>1 YEAR</td>
+                                            <td>Class Coordinator</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5</td>
+                                            <td>Yoga Class  (II Sem)</td>
+                                            <td>19-06-203</td>
+                                            <td>First Year (3)</td>
+                                            <td>--</td>
+                                        </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>Group Discussion  (II Sem)</td>
+                                            <td>21-06-2023</td>
+                                            <td>First Year (15)</td>
+                                            <td>Mrs.Divya /CDP Coordinator</td>
+                                        </tr>
+                                        <tr>
+                                            <td>7</td>
+                                            <td>Seminar on Industrial Automation</td>
+                                            <td>21.07.2023</td>
+                                            <td>1st year</td>
+                                            <td>Mr.R.Karunesh IPECS</td>
+                                        </tr>
+                                        <tr>
+                                            <td>8</td>
+                                            <td>Webinar on solar energy</td>
+                                            <td>25.07.2023</td>
+                                            <td>1st year</td>
+                                            <td>Yet to finalize</td>
+                                        </tr>
+                                        <tr>
+                                            <td>9</td>
+                                            <td>Industral Visit</td>
+                                            <td>25.09.2023</td>
+                                            <td>ALL 2,3,4 Years</td>
+                                            <td>--</td>
+                                        </tr>
+                                        <tr>
+                                            <td>10</td>
+                                            <td>Symposium</td>
+                                            <td>29.09.2023</td>
+                                            <td>ALL 2,3,4 Years</td>
+                                            <td>--</td>
+                                        </tr>
+                                        <tr>
+                                            <td>11</td>
+                                            <td>Presentation day</td>
+                                            <td>12.10.2023</td>
+                                            <td>II YEAR</td>
+                                            <td>--</td>
+                                        </tr>
+                                        <tr>
+                                            <td>12</td>
+                                            <td>Webinar</td>
+                                            <td>24.08.2023</td>
+                                            <td>II YEAR</td>
+                                            <td>N.Santhanam Director TCIL</td>
+                                        </tr>
+                                        <tr>
+                                            <td>13</td>
+                                            <td>INNOVATIVE  CLASS</td>
+                                            <td>13.08.2023</td>
+                                            <td>II YEAR</td>
+                                            <td>R.RAMANATHAN</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                             
                         </div>
 
