EEE details Updated

--- a/departments/ug/eee.html
+++ b/departments/ug/eee.html
@@ -364,31 +364,35 @@
 
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/civilImg/Hydraulic Engineering lab.jpg"
-                                        alt="">
-                                    <h5 class="text-center py-5">Hydraulic Engineering lab</h5>
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng.jpg" alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/civilImg/Highway Engineering lab.jpg"
-                                        alt="">
-                                    <h5 class="text-center py-5">Highway Engineering</h5>
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-1.jpg" alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/civilImg/Materials Testing lab.jpg" alt="">
-                                    <h5 class="text-center py-5">Materials Testing lab</h5>
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-2.jpg" alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/civilImg/Soil Mechanics lab.jpg" alt="">
-                                    <h5 class="text-center py-5">Soil Mechanics lab</h5>
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-3.jpg" alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/civilImg/Water and Waste Water Analysis lab.jpg"
-                                        alt="">
-                                    <h5 class="text-center py-5">Water and Waste Water Analysis lab</h5>
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-4.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded"
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-5.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded"
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-6.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded"
+                                        src="/assets/images/separateCourses/eeeImg/eeeEng-7.jpg" alt="">
                                 </div>
 
                             </div>
