EEE details Updated

--- a/departments/ug/eee.html
+++ b/departments/ug/eee.html
@@ -417,7 +417,11 @@
         <div class="container">
             <div class="py-lg-10 py-md-8 py-6 text-center ">
                 <h2 class="mb-lg-10 title">UPCOMING EVENTS</h2>
-                <h4 class="mb-lg-10">Coming Soon..</h4>
+                <!-- <h4 class="mb-lg-10">Coming Soon..</h4> -->
+
+                <h4 class="text-black">ELECTRIC VEHICLE TECHNOLOGY 10.03.2025</h4>
+                <h4 class="text-black">PROJECT EXHIBITION 16.04.2025</h4>
+                <h4 class="text-black">ESEMINARS ON RENEWABLE ENERGY  TECHNOLOGY 22.06.2025</h4>
             </div>
         </div>
     </section>
