EIE details Updated

--- a/departments/ug/eie.html
+++ b/departments/ug/eie.html
@@ -13,63 +13,6 @@
     <!-- Fontawesome Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
 
-    <style>
-        /* Glassmorphism background */
-        .modal-content {
-            background: rgba(255, 255, 255, 0.25);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 15px;
-        }
-
-        /* Glassmorphic input fields */
-        .form-control,
-        .form-select {
-            background: rgba(255, 255, 255, 0.5);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            backdrop-filter: blur(5px);
-            border-radius: 8px;
-            padding: 10px;
-            font-size: 1rem;
-            color: #000;
-            transition: all 0.3s ease;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            border-color: rgba(211, 32, 50, 0.5);
-            box-shadow: 0 0 8px rgba(232, 39, 58, 0.5);
-            outline: none;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .scrolled {
-            background-color: white;
-            color: black;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .scrolled .nav-link {
-            color: black !important;
-        }
-
-        @media (max-width: 769px) {
-            .navbar {
-                background: #fff;
-            }
-
-        }
-    </style>
-
 </head>
 
 <body>
@@ -144,7 +87,7 @@
                         <!-- About Section -->
                         <div id="about" class="content-section">
                             <h2 class="title-slogan mb-4">About</h2>
-                            <p class="text-justify">
+                            <p class="text-justify text-black">
                                 "Welcome to the Department of Electronics and Instrumentation Engineering (EIE). The
                                 Department was started in the year 1998, offering Bachelor Degree programme (B.E.) in
                                 Instrumentation Engineering later converted to Electronics and Instrumentation
@@ -173,14 +116,14 @@
 
                             <div class="mt-10 p-5" style="border: 10px solid #9d7651;">
                                 <h2 class="title-slogan mb-4">VISION</h2>
-                                <p class="text-justify">
+                                <p class="text-justify text-black">
                                     Technology towards total automation in Instrumentation and Process Control
                                     Engineering.
                                 </p>
                             </div>
                             <div class="mt-10 p-5" style="border: 10px solid #9d7651;">
                                 <h2 class="title-slogan mb-4">MISSION</h2>
-                                <p class="text-justify">
+                                <p class="text-justify text-black">
                                     "Providing a value based professional education with quality infrastructure, modern
                                     teaching methodologies and full-fledged lab facilities, having latest automation
                                     technologies on SCADA, DCS, MATLAB, LABVIEW, PLC.
@@ -195,7 +138,7 @@
                         <!-- Facilities Section -->
                         <div id="facilities" class="content-section d-none">
                             <h2 class="title-slogan mb-4">Facilities</h2>
-                            <ul>
+                            <ul class="text-black">
                                 <li>TRANSDUCERS AND MEASUREMENTS LABORATORY</li>
                                 <li>INDUSTRIAL INSTRUMENTATION LABORATORY</li>
                                 <li>PROCESS CONTROL LABORATORY</li>
@@ -236,38 +179,31 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>AMSAVALLI P</td>
-                                            <td>FIRELESS COOKING</td>
-                                            <td>PERIYAR MANIAMMAI COLLEGE</td>
+                                            <td>M. SABARINATHAN</td>
+                                            <td>DUMB CHARADES</td>
+                                            <td>HOLY CROSS COLLEGE</td>
                                             <td>FIRST PRICE</td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>SRINITHI T</td>
-                                            <td>FIRELESS COOKING</td>
-                                            <td>PERIYAR MANIAMMAI COLLEGE</td>
-                                            <td>FIRST PRICE</td>
+                                            <td>DHALAL ASMI</td>
+                                            <td>EXTEMPORE COMPETITION</td>
+                                            <td>CONDUCTED BY ISRO AND ANNA UNIVERSITY IN JAMAL MOHAMMED COLLEGE , TRICHY</td>
+                                            <td>THIRD PRICE</td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>SIVARANJANI V</td>
-                                            <td>CONNECTION EVENT</td>
-                                            <td>PERIYAR MANIAMMAI COLLEGE</td>
-                                            <td>SECOND PRICE</td>
+                                            <td>M. SABARINATHAN, M. GURUSIVASRINIVASAN, V. SURENDHAR</td>
+                                            <td>SCIENCE MODEL COMPETITION</td>
+                                            <td>CONDUCTED BY ISRO AND ANNA UNIVERSITY IN JAMAL MOHAMMED COLLEGE , TRICHY</td>
+                                            <td>THIRD PRICE</td>
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>VINISHA T</td>
-                                            <td>CONNECTION EVENT</td>
-                                            <td>PERIYAR MANIAMMAI COLLEGE</td>
-                                            <td>THIRD PRICE</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>THANGAMARIS K</td>
-                                            <td>CONNECTION EVENT</td>
-                                            <td>PERIYAR MANIAMMAI COLLEGE</td>
-                                            <td>THIRD PRICE</td>
+                                            <td>M. NASRULLAH</td>
+                                            <td>STANDUP COMEDY, MIMICRY</td>
+                                            <td>MAMARIA - 2K23 - M.A.M. COLLEGE OF ENGINEERING</td>
+                                            <td>FIRST PRICE</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -279,56 +215,7 @@
                         <div id="placement" class="content-section d-none">
                             <h2 class="title-slogan mb-4">Placements</h2>
 
-                            <div class="table-container">
-                                <table class="trust-table">
-                                    <thead>
-                                        <tr class="text-white" style="background-color: #9d7651;">
-                                            <th>SI.NO</th>
-                                            <th>STUDENT NAME</th>
-                                            <th>YEAR</th>
-                                            <th>JOB TITLE</th>
-                                            <th>STUDENT PHOTO</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>ARIVUKARASU.A</td>
-                                            <td>IV</td>
-                                            <td>SURVEYOR</td>
-                                            <td>-</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>ARUNPANDIYAN.A</td>
-                                            <td>IV</td>
-                                            <td>SURVEYOR</td>
-                                            <td>-</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>DHINESKUMAR.M</td>
-                                            <td>IV</td>
-                                            <td>SURVEYOR</td>
-                                            <td>-</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>KANIGACHALAM.G</td>
-                                            <td>IV</td>
-                                            <td>SURVEYOR</td>
-                                            <td>-</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>HELEN SOBHA.A</td>
-                                            <td>IV</td>
-                                            <td>SURVEYOR</td>
-                                            <td>-</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                            <p class="text-black">Update Soon...</p>
 
                         </div>
 
