MCA Details On Going

--- a/departments/pg/environmental-engineering.html
+++ b/departments/pg/environmental-engineering.html
@@ -13,63 +13,6 @@
     <!-- Fontawesome Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
 
-    <style>
-        /* Glassmorphism background */
-        .modal-content {
-            background: rgba(255, 255, 255, 0.25);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 15px;
-        }
-
-        /* Glassmorphic input fields */
-        .form-control,
-        .form-select {
-            background: rgba(255, 255, 255, 0.5);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            backdrop-filter: blur(5px);
-            border-radius: 8px;
-            padding: 10px;
-            font-size: 1rem;
-            color: #000;
-            transition: all 0.3s ease;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            border-color: rgba(211, 32, 50, 0.5);
-            box-shadow: 0 0 8px rgba(232, 39, 58, 0.5);
-            outline: none;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .scrolled {
-            background-color: white;
-            color: black;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .scrolled .nav-link {
-            color: black !important;
-        }
-
-        @media (max-width: 769px) {
-            .navbar {
-                background: #fff;
-            }
-
-        }
-    </style>
-
 </head>
 
 <body>
@@ -147,10 +90,7 @@
                         <div id="about" class="content-section">
                             <h2 class="title-slogan mb-4">About</h2>
                             <p class="text-justify text-black">
-                                Department of Civil Engineering the latest of branches in MAMCE was started in the
-                                academic year 2009-10. The discipline deals with the design, construction and
-                                maintenance of the physical and naturally built environment, including works such as
-                                bridges, roads, canals, dams and buildings.
+                                Electrical engineering is an engineering discipline concerned with the study, design, and application of equipment, devices, and systems which use electricity, electronics, and electromagnetism. It emerged as an identifiable occupation in the latter half of the 19th century after the commercialization of the electric telegraph, the telephone, and electrical power generation, distribution, and use.
                             </p>
                             <div class="mt-10 p-5" style="border: 10px solid #9d7651;">
                                 <h2 class="title-slogan mb-4">VISION</h2>
