MCA Details Gallery Finished

--- a/departments/pg/mca.html
+++ b/departments/pg/mca.html
@@ -360,7 +360,85 @@
                         <!-- Gallery Section -->
                         <div id="gallery" class="content-section d-none">
                             <h2 class="title-slogan mb-4">Gallery</h2>
-                            <p class="text-black">Details about the curriculum will go here.</p>
+                            <div class="row g-5">
+
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-1.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-2.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-3.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-4.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-5.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-6.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-7.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-8.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-9.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-10.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-11.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-12.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-13.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-14.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-15.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-16.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-17.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-18.jpg"
+                                        alt="">
+                                </div>
+                                <div class="col-lg-6">
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/mcaImg/mca-19.jpg"
+                                        alt="">
+                                </div>
+                            </div>
                         </div>
 
                         <!-- Contact Us Section -->
