--- a/admin.html
+++ b/admin.html
@@ -73,7 +73,7 @@
         .content {
             margin-left: 250px;
             min-height: 100vh;
-            background: #FFFFFF;
+            background: #e2e1e1;
             transition: 0.5s;
         }
 
@@ -155,6 +155,14 @@
                 margin-left: 15px;
             }
         }
+
+        .border-bottoms{
+            border-bottom: 1px solid #cdcecf;
+        }
+
+        .border-lefts{
+            border-left: 5px solid #2f4050;
+        }
     </style>
 
 </head>
@@ -231,7 +239,85 @@
             <!-- Navbar End -->
 
             <!-- Main Content -->
+            <div class="main-dash px-10 py-5">
+                <div class="">
 
+                    <ul class="list-unstyled mt-5">
+
+                        <div class="bg-body rounded border-lefts">
+
+                            <div class="">
+                                <div class="d-flex align-items-center justify-content-between pt-5 px-16">
+                                    <div class="d-flex align-items-center gap-4">
+                                        <li>Demo</li>
+                                        <li class="bg-black text-white rounded-1 py-1 px-2">Admissin Enquries</li>
+                                    </div>
+                                    <li>12 Jan 2025</li>
+                                </div>
+                                <div class="border-bottoms m-0 px-16 pt-3">
+                                    <p>Admissin Form</p>
+                                </div>
+                            </div>
+
+                            <div class="">
+                                <div class="d-flex align-items-center justify-content-between pt-5 px-16">
+                                    <div class="d-flex align-items-center gap-4">
+                                        <li>Demo</li>
+                                        <li class="bg-black text-white rounded-1 py-1 px-2">Admissin Enquries</li>
+                                    </div>
+                                    <li>12 Jan 2025</li>
+                                </div>
+                                <div class="border-bottoms m-0 px-16 pt-3">
+                                    <p>Admissin Form</p>
+                                </div>
+                            </div>
+
+                            <div class="">
+                                <div class="d-flex align-items-center justify-content-between pt-5 px-16">
+                                    <div class="d-flex align-items-center gap-4">
+                                        <li>Demo</li>
+                                        <li class="bg-black text-white rounded-1 py-1 px-2">Admissin Enquries</li>
+                                    </div>
+                                    <li>12 Jan 2025</li>
+                                </div>
+                                <div class="border-bottoms m-0 px-16 pt-3">
+                                    <p>Admissin Form</p>
+                                </div>
+                            </div>
+
+                            <div class="">
+                                <div class="d-flex align-items-center justify-content-between pt-5 px-16">
+                                    <div class="d-flex align-items-center gap-4">
+                                        <li>Demo</li>
+                                        <li class="bg-black text-white rounded-1 py-1 px-2">Admissin Enquries</li>
+                                    </div>
+                                    <li>12 Jan 2025</li>
+                                </div>
+                                <div class="border-bottoms m-0 px-16 pt-3">
+                                    <p>Admissin Form</p>
+                                </div>
+                            </div>
+
+                            <div class="">
+                                <div class="d-flex align-items-center justify-content-between pt-5 px-16">
+                                    <div class="d-flex align-items-center gap-4">
+                                        <li>Demo</li>
+                                        <li class="bg-black text-white rounded-1 py-1 px-2">Admissin Enquries</li>
+                                    </div>
+                                    <li>12 Jan 2025</li>
+                                </div>
+                                <div class="border-bottoms m-0 px-16 pt-3">
+                                    <p>Admissin Form</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        
+                    </ul>
+
+                </div>
+            </div>
 
         </div>
         <!-- Content End -->
